# Tetsuo

./: .gitignore  .gitmodules  CMakeLists.txt  Setup.ps1
Projects/: CMakeLists.txt
Projects/TetsuoUDPClient/: CMakeLists.txt  precompiled.hpp
Projects/TetsuoUDPClient/Include/: tetsuo_data_handler.hpp  tetsuo_udp_server.hpp  tetsuo_udp_server_layout.hpp
Projects/TetsuoUDPClient/Source/: tetsuo_udp_server.cpp  tetsuo_udp_server_layout.cpp
Tools/: vs_filter_structure.cmake
